[gd_scene format=3 uid="uid://ct4snjslscwpc"]

[ext_resource type="Script" uid="uid://25fy2hb70cic" path="res://scripts/boon_dialog.gd" id="1_f65cv"]
[ext_resource type="PackedScene" uid="uid://b2eghjtqhggtb" path="res://scenes/boon_card.tscn" id="2_dacob"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f65cv"]
bg_color = Color(0.15294118, 0.105882354, 0.21568628, 0.8235294)

[sub_resource type="FontFile" id="FontFile_f65cv"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/variation_coordinates = {}
cache/0/face_index = 0
cache/0/embolden = 0.0
cache/0/transform = Transform2D(1, 0, 0, 1, 0, 0)
cache/0/spacing_top = 0
cache/0/spacing_bottom = 0
cache/0/spacing_space = 0
cache/0/spacing_glyph = 0
cache/0/baseline_offset = 0.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_dacob"]
font = SubResource("FontFile_f65cv")
font_size = 18

[node name="BoonDialog" type="Control" unique_id=155098323]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f65cv")

[node name="Background" type="PanelContainer" parent="." unique_id=1343417608]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f65cv")

[node name="HBoxContainer" type="HBoxContainer" parent="Background" unique_id=367979431]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Background/HBoxContainer" unique_id=544838562]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer" unique_id=509584046]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator4" type="HSeparator" parent="Background/HBoxContainer/VBoxContainer" unique_id=95678280]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Background/HBoxContainer/VBoxContainer" unique_id=705162111]
layout_mode = 2
text = "You just obtained a hot cup of... what exactly?"
label_settings = SubResource("LabelSettings_dacob")

[node name="HSeparator3" type="HSeparator" parent="Background/HBoxContainer/VBoxContainer" unique_id=966172995]
layout_mode = 2

[node name="BoonCard1" parent="Background/HBoxContainer/VBoxContainer" unique_id=323196718 instance=ExtResource("2_dacob")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Background/HBoxContainer/VBoxContainer" unique_id=296745366]
layout_mode = 2

[node name="BoonCard2" parent="Background/HBoxContainer/VBoxContainer" unique_id=988698448 instance=ExtResource("2_dacob")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Background/HBoxContainer/VBoxContainer" unique_id=614586673]
layout_mode = 2

[node name="BoonCard3" parent="Background/HBoxContainer/VBoxContainer" unique_id=662165945 instance=ExtResource("2_dacob")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="Background/HBoxContainer/VBoxContainer" unique_id=1762850289]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="Background/HBoxContainer" unique_id=1787785450]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
